@@ -4,6 +4,9 @@ VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/
 
 Version 1.16-19 (opened May 14, 2009)
 
+	* wcmdscale: remove zero eigenvalues, keep negative, and do not
+	assume that the last eigenvalue is zero. 
+
 	* RsquareAdj.cca: returns R2, but no adjusted R2 (which is NA). 
 
 	* kendall.global: fixed a bug that caused incorrect counts of ties
